--- a/{{ cookiecutter.project_name }}/pyproject.toml
+++ b/{{ cookiecutter.project_name }}/pyproject.toml
@@ -6,10 +6,10 @@ authors = ["{{cookiecutter.author_name}}"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-bentoml = "^1.0.15"
 mlem = "^0.4.5"
 pandas = "^1.5.3"
 scikit-learn = "1.2.0"
+bentoml = "^1.0.15"
 
 [tool.poetry.group.dev.dependencies]
 black = "^22.12.0"
@@ -19,6 +19,7 @@ pylint = "^2.14.2"
 flake8 = "^6.0.0"
 flake8-docstrings = "^1.6.0"
 pre-commit = "^2.20.0"
+coverage = "^7.2.1"
 
 [build-system]
 requires = ["poetry-core"]
@@ -38,10 +39,14 @@ disable = [
 ]
 
 [tool.mypy]
-python_version = 3.10
+python_version = "3.10"
 
 [[tool.mypy.overrides]]
 module = "app.service"
+ignore_errors = true
+
+[[tool.mypy.overrides]]
+module = "tests.*"
 ignore_errors = true
 
 [tool.isort]
@@ -51,3 +56,9 @@ include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
+
+[tool.pytest.ini_options]
+addopts = "-p no:warnings"
+testpaths = [
+    "tests"
+]
