--- a/{{ cookiecutter.project_name }}/pyproject.toml
+++ b/{{ cookiecutter.project_name }}/pyproject.toml
@@ -59,6 +59,4 @@ ensure_newline_before_comments = true
 
 [tool.pytest.ini_options]
 addopts = "-p no:warnings"
-testpaths = [
-    "tests"
-]
+testpaths = ["tests"]
